<resources>
    <string name="app_name">SmartCrops</string>
    <string name="login_button">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgot">Forgot Password ?</string>
    <string name="empty_login">"Empty Fields "</string>
    <string name="error_login">"User or password wrong"</string>
    <string name="bar_search">Search</string>
    <string name="bar_info">Info</string>
    <string name="bar_logOut"> Log Out</string>
    <string name="username">UserName</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_button">Create an account</string>
    <string name="verify_email">Please Verify Email</string>
    <string name="password_match">Passwords do not match</string>
    <string name="new_user">User Created Successful</string>
    <string name="fall_create_user">User does not create</string>
    <string name="forgot_password">Forgot your password</string>
    <string name="text_forgot_password">Please enter your email address to retrieve your password.
    We will email you a link to reset it.</string>
    <string name="send_email">Send</string>
    <string name="email_send_successful">Email sended successful</string>
    <string name="email_send_unsuccessful">Email did not send</string>
    <string name="greeting">"Hello %1$s"</string>
    <string name="map_not_load">The Map has not been loaded yet</string>
    <string name="title_activity_specific_irrigation">SpecificIrrigationActivity</string>
    <string name="processing">Processing...</string>
    <string name="station_name">"Station Name: %1$s"</string>
    <string name="station_function">"Function: %1$s"</string>
    <string name="station_latitude">"Latitude: %1$f"</string>
    <string name="station_longitude">"Longitude: %1$f"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
